# Neuro-Fighter

./: .gitignore  DS_10Cycles.txt  DSvsDT-10.txt  DSvsDT-10_2.2.txt  DSvsDT-10_2.3.txt  DSvsDT-10_2.4.txt  DSvsDT-10_2.txt  DSvsDT-10_3.1.txt  DSvsDT-10_3.2.txt  DSvsDT-10_3.3.txt  DSvsDT-10_3.4.txt  DSvsDT-30.txt  LICENSE  NDS_10Cycles.txt  NDSvsDT-10.txt  NDSvsDT-10_2.2.txt  NDSvsDT-10_2.3.txt  NDSvsDT-10_2.4.txt  NDSvsDT-10_2.txt  NDSvsDT-10_3.1.txt  NDSvsDT-10_3.2.txt  NDSvsDT-10_3.3.txt  NDSvsDT-10_3.4.txt  NDSvsDT-30.txt  README.md  ai_saved_states.json  ai_saved_states_ds.json  ai_saved_states_nds.json  character1_animationTracks.gd  character1_animationTracks.gd.uid  icon.svg.import  issues_note.txt  nds_training.txt  project.godot  training.txt
Assets/Characters/: Ryu - New Version.png.import
Levels/: DebugConsole.tscn  Main.gd  Main.gd.uid  MainMenu.gd  MainMenu.gd.uid  PauseMenu.tscn  RealTimeChartPanel.tscn  RealTimeChartPanel.tscn1670781096.tmp  RealTimeChartPanel2.tscn  SaveDialog.tscn  Simulation.tscn  Simulationv2.0.tscn  Simulationv2.0.tscn1004258223.tmp  Simulationv2.0.tscn1046313559.tmp  Simulationv2.0.tscn18049749570.tmp  Simulationv2.0.tscn3193028687.tmp  Simulationv2.0.tscn438202701.tmp  Simulationv2.0.tscn875808804.tmp  main_menu.tscn  main_menu.tscn213206396.tmp  main_menu_old.tscn
NDS/: .gitattributes  nds.py  nds_model.keras  pyproject.toml
NDS/nds1/: fingerprint.pb  saved_model.pb
NDS/nds1/variables/: variables.data-00000-of-00001  variables.index
NDS/tf_test/: README.md  meson.build  tf_test.c
Scripts/: Global.gd  Global.gd.uid
(+445 files in other folders)
