[project]
name = "nds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iree-base-compiler>=3.7.1",
    "iree-base-runtime>=3.7.0",
    "iree-tools-tf>=20250904.1374",
    "marimo>=0.16.0",
    "pandas>=2.3.2",
    "python-lsp-server>=1.13.1",
    "tensorflow>=2.20.0",
    "websockets>=15.0.1",
]
